--- a/utilities/css/style.css
+++ b/utilities/css/style.css
@@ -1,21 +1,32 @@
-body {
-    background-color: blueviolet;
-}
 
+body {
+    background-color: #480C85;
+}
 .counter{
-    height: 200px;
-    width: 400px;
-    padding: 30px;
-    margin: 250px auto;
-    background-color: gold;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    height: 300px;
+    width: 500px;
+    padding: 10px;
+    margin: 300px auto;
+    background-color: #FFD700;
+    text-align: center;
+    font-size: 30px;
+    
 }
 button{
     font-size: 15px;
     color: black;
     padding: 15px 30px 15px 30px;
+    margin-right: 30px;
+}
+.buttons{
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+   
     
 }
