--- a/utilities/css/style.css
+++ b/utilities/css/style.css
@@ -20,7 +20,7 @@ button{
     font-size: 15px;
     color: black;
     padding: 15px 30px 15px 30px;
-    margin-right: 30px;
+    margin-right: 1em;
 }
 .buttons{
     margin-top: 2em;
